modules/nat/main.tf
# allocate elastic ip for the nat-gateway in the public subnet 1 (PUB_SUB1)
resource "aws_eip" "eip_1" {
  tags = {
    Name = "EIP1"
  }
}

# allocate elastic ip for the nat-gateway in the public subnet 2 (PUB_SUB2)
resource "aws_eip" "eip_2" {
  tags = {
    Name = "EIP2"
  }
}

resource "aws_nat_gateway" "nat_gw1" {
  allocation_id = aws_eip.eip_1.id
  subnet_id     = var.pub_subnet_az1_id

  tags = {
    Name = "nat_gw1"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [var.igw_id]
}

resource "aws_nat_gateway" "nat_gw2" {
  allocation_id = aws_eip.eip_2.id
  subnet_id     = var.pub_subnet_az2_id

  tags = {
    Name = "nat_gw2"
  }

  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [var.igw_id]
}

# create private route table pri-rt-a and add route through nat_gw1
resource "aws_route_table" "pri-rt-a" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw1.id
  }

  tags = {
    Name = "pri-rt-a"
  }
}

# associate private subnet pri-sub3 with private route table pri-rt-a
resource "aws_route_table_association" "pri-sub3-with-pri-rt-a" {
  subnet_id      = var.private_subnet_az1_id
  route_table_id = aws_route_table.pri-rt-a.id
}


# create private route table pri-rt-b and add route through nat_gw2
resource "aws_route_table" "pri-rt-b" {
  vpc_id = var.vpc_id

  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat_gw2.id
  }

  tags = {
    Name = "pri-rt-b"
  }
}

# associate private subnet pri-sub4 with private route pri-rt-b
resource "aws_route_table_association" "pri-sub4-with-pri-rt-b" {
  subnet_id      = var.private_subnet_az2_id
  route_table_id = aws_route_table.pri-rt-b.id
}
